# meal_prep

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  DOCKER_README.md  Dockerfile  Dockerfile.claude  Dockerfile.job  GCP_CHEATSHEET.md  Makefile  PACKAGING.md  PLAN.md  README.md  cloudbuild.yaml  db_manager.h  deploy_db_job.sh  docker-compose.yml  dump_db.py  entrypoint.sh  ingredient.h  login.sh  main.cpp  meal.h  meal_factory.cpp  meal_factory.h  meal_prep.conf.json  meal_prep.conf.json.example  meals.db  measurement.h  restart.sh  run_claude.sh  start.sh  start_server.sh  stop.sh
.claude/agent-memory/unit-test-writer/: MEMORY.md  project_meal_prep_coverage.md
.claude/skills/heic-recipe/: SKILL.md
.github/workflows/: build-test.yml  clang-format.yml  clang-lint.yml  clang-tidy.yml  coverage.yml  cppcheck.yml  sanitizers.yml
db_job/: deploy_db_job.sh  dump_db.py
docs/: API.md  BRANDING.md  DB_DUMP_JOB.md  DOCKER_COMMANDS.md  GCP_COMMANDS.md
recipes/: IMG_6346.HEIC  IMG_6347.HEIC  IMG_6348.HEIC  IMG_6349.HEIC  IMG_6350.HEIC  IMG_6351.HEIC  IMG_6352.HEIC  greek-lemon-chicken-and-potatoes.json  orzo-with-parmesan-and-peas.json  veggieorzo.json
scripts/: clang-format.sh  clang-tidy.sh  cleanup_tests.py  lintenator.sh  upload_recipe.py
skills/documentation_management/: SKILL.md
skills/pdf_recipe_parser/: SKILL.md  upload_recipe_task.md
skills/pdf_recipe_parser/scripts/: parse_recipe.py
src/: api_routes.cpp  api_routes.h  calendar_service.cpp  calendar_service.h  config_parser.cpp  config_parser.h  curl_utils.h  db_manager.cpp  db_manager.h  email_service.cpp  email_service.h  google_oauth.cpp  google_oauth.h  ingredient.h  ingredient_names.h  main.cpp  meal.h  meal_factory.cpp  meal_factory.h  meal_planner.cpp  meal_planner.h  measurement.h  middleware.h  token_encryption.cpp  token_encryption.h  workout.h
static/: index.html  script.js  style.css  workouts.js
static/mockups/: 1-editorial.html  2-bento-glass.html  3-notion-clean.html  notion-1-indigo-cards.html  notion-2-sage-agenda.html  notion-3-amber-kanban.html  notion-3-indigo-kanban.html
tests/: test_db_manager.cpp  test_ingredient.cpp  test_meal.cpp  test_meal_factory.cpp  test_meal_planner.cpp  test_measurement.cpp  test_token_encryption.cpp  test_workout_service.cpp
